--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version":"1.0.0",
   "description":"cours youtube node de zéro // API RESTful",
   "engines":{
-    "node":"17.7.1"
+    "node":"17.7.1",
+    "npm":"8.5.4"
   },
   "main":"app.js",
   "scripts":{
