--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name":"node-api-yt",
-  "version":"1.0.0",
-  "description":"cours youtube node de zéro // API RESTful",
-  "engines":{
-    "node":"14.x",
-    "npm":"8.5.4"
+  "name": "node-api-yt",
+  "version": "1.0.0",
+  "description": "cours youtube node de zéro // API RESTful",
+  "engines": {
+    "node": "14.x",
+    "npm": "8.5.4"
   },
-  "main":"app.js",
-  "scripts":{
-    "start":"node app.js",
-    "dev":"nodemon app.js"
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
-  "author":"Julien",
-  "license":"ISC",
-  "dependencies":{
-    "bcrypt":"^5.0.1",
-    "body-parser":"^1.19.2",
-    "express":"^4.17.3",
-    "jsonwebtoken":"^8.5.1",
-    "mariadb":"^3.0.0",
-    "sequelize":"^6.17.0",
-    "serve-favicon":"^2.5.0"
+  "author": "Julien",
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "mariadb": "^3.0.0",
+    "sequelize": "^6.17.0",
+    "serve-favicon": "^2.5.0"
   },
-  "devDependencies":{
-    "nodemon":"^2.0.15"
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
